correction mobile+desk

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -9,7 +9,7 @@
   padding-top: 37px;
   background: $headerBackgroundColor;
   z-index: 996;
- 
+
   @media screen and (min-width: 768px) {
     // padding-top: 0px;
   }
@@ -25,35 +25,13 @@
               top: 0;
             }
 
-
-    // &_container {
-    //   width: 100%;
-    //   margin: 0 auto;
-    //   display: flex;
-    //   align-items: center;
-    //   justify-content: center;
-
-      
-    //     @media screen and (min-width: 480px) {
-    //       min-width: 480px;
-    //     }
-    
-    //     @media screen and (min-width: 768px) {
-    //       min-width: 768px;
-    //     }
-    
-    //     @media screen and (min-width: 1280px) {
-    //       min-width: 1280px;
-    //     }
-    // }
-
           &_menu-list {
             font-weight: 700;
             font-size: 16px;
             line-height: 1.31;
             display: flex;
             align-items: center;
-            
+
                 @media screen and (min-width: 320px) and (max-width: 479px) {
                   display: none;
                 }
@@ -73,21 +51,12 @@
 
 }
 
-// .link {
-//   text-decoration: none;
-// }
-
-// .list {
-//   list-style: none;
-// }
-
 .header_menu-item {
   margin-right: 35px;
   &:last-child {
     margin-right: 0;
   }
 }
-
 
 .header_menu-link {
   cursor: pointer;
@@ -153,7 +122,7 @@
 
 .mobile-menu {
     position: fixed;
-    background: $headerMobMenuColor;    
+    background: $headerMobMenuColor;
     filter: drop-shadow(-8px 0px 20px rgba(0, 0, 0, 0.25));
     width: 254px;
     height: 100vh;
@@ -171,7 +140,7 @@
           @media screen and (min-width: 1200px ) {
             display: none;
           }
-   
+
 }
 
 .open-menu-button {
@@ -188,7 +157,9 @@
         display: none;
       }
       @media screen and (min-width: 768px ) {
-        // margin-right: 30px;
+        position: absolute;
+        top: 50px;
+        right: 224px;
       }
       @media screen and (min-width: 320px ) {
         position: absolute;
@@ -207,7 +178,7 @@
   top: 23px;
 }
 
-.btn_icon {
+.button_icon {
   width: 20px;
   height: 12px;
 }
@@ -286,12 +257,16 @@
 
 -------Modal-----
 
-.backdrop {
+.submit-button {
+  border: 10px solid red;
+}
+
+.backdrop-modal {
   width: 100vw;
   height: 100vh;
   background-color: rgba(205, 171, 188, 0.614);
   position: fixed;
-  z-index: 999;
+  z-index: 998;
   top: 0;
   left: 0;
   transition: opacity 300ms, visibility 300ms;
@@ -300,8 +275,7 @@
   }
 }
 
-
-.modal {
+.modal_header {
   width: 500px;
   min-height: 600px;
   background-color: $accentColor;
@@ -318,7 +292,7 @@
 
 }
 
-.modal-title {
+.header-modal-title {
   font-size: 17px;
   font-weight: 600;
   line-height: 1.3;
@@ -327,14 +301,14 @@
   margin-bottom: 15px;
 }
 
-.modal-form-field {
+.header-modal-form-field {
   margin-bottom: 15px;
 }
-.modal-input-wrap {
+.header-modal-input-wrap {
   position: relative;
 }
 
-.modal-input {
+.header-modal-input {
   width: 100%;
   height: 45px;
   border: 1px solid $firstBorderColor;
@@ -345,7 +319,7 @@
   background-color: transparent;
   color: $mainTextColor;
   transition: border-color 300ms linear;
-  &:focus + .input-icon {
+  &:focus + .header-input-icon {
       fill: $fourthTextColor;
   }
   &:focus {
@@ -358,7 +332,7 @@
   }
 }
 
-.modal-text {
+.header-modal-text {
   width: 100%;
   height: 100px;
   border: 1px solid $firstBorderColor;
@@ -380,14 +354,14 @@
   }
 }
 
-.modal-input-text {
+.header-modal-input-text {
   font-size: 10px;
   display: block;
   margin-bottom: 7px;
   color: $mainTextColor;
 }
 
-.modal-btn {
+.header-modal-btn {
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -397,7 +371,7 @@
   }
 }
 
-.input-btn-icon {
+.header-input-btn-icon {
   margin-left: 6px;
   transition: fill 300ms linear;
 }
